# nexus-pms-service

./: .gitignore  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml
agent/: graph.py  state.py
alembic/: env.py
alembic/versions/: 054123e0ca74_add_auth_revoked_tokens.py  a8c1a0cd6547_init_schema.py  aa12bb34cc56_move_branch_address_to_areas.py  bb23cc45dd67_add_content_html_to_invoice_lease_deposit.py  c9f7d6b1e2a3_add_buildings_room_floor_and_identity_fields.py  cc34dd56ee78_decouple_deposit_from_lease.py  dd45ee67ff89_add_renter_id_to_deposits.py  e1f2a3b4c5d6_add_form_templates_table.py  ee56ff78aa90_add_saas_packages_and_landing_sections.py  f3a4b5c6d7e8_add_content_to_invoices_and_leases.py  ff67aa89bb01_add_google_auth_team_and_user_subscriptions.py  gg78bb90cc12_add_pro_aurora_theme_feature.py  hh89cc01dd23_add_platform_admins_table.py  ii90dd12ee34_seed_full_rental_permissions.py  jj01ee23ff45_add_user_preferences_table.py  kk12ff34gg56_remove_mysql_vector_storage.py  ll23gg45hh67_add_collaboration_chat_tables_and_typing.py  mm34hh56ii78_seed_collaboration_permissions.py  nn45ii67jj89_add_permission_module_mean_and_delete_modes.py  oo56jj78kk90_add_service_fees_and_customer_appointments.py  pp67kk89ll01_seed_service_fee_and_customer_appointment_permissions.py  qq78ll90mm12_isolate_team_workspaces_into_dedicated_tenants.py  rr89mm01nn23_move_deposit_to_leases_and_add_room_maintenance_status.py  ss90nn12oo34_add_lease_contract_steps_fields.py  tt01oo23pp45_seed_lease_permissions.py  (+5 more)
app/api/: deps.py
app/db/: base.py  (+2 more)
redis/: redis.conf
(+166 files in other folders)
