[project]
name = "nexus-pms-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncmy>=0.2.11",
    "email-validator>=2.3.0",
    "fastapi>=0.128.7",
    "google-auth>=2.43.0",
    "langgraph>=1.0.1",
    "minio>=7.2.18",
    "passlib[bcrypt]>=1.7.4",
    "pymysql>=1.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.5.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
    "pillow>=12.1.1",
    "ollama>=0.6.1",
]
